# sdlr

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
.github/workflows/: R-CMD-check.yaml  lint.yaml  test-coverage.yaml  test-with-valgrind.yaml
R/: RcppExports.R  audio.R  extdata.R  hello.R  misc.R  pick.R  utils.R  view.R  zzz.R
data/: human.rda
inst/include/: sdlr.h
man/: SDLR_Quit.Rd  SDLaudio.Rd  getAudioDevices.Rd  hello_audio.Rd  human.Rd  pick.Rd  train-whistle.wav.Rd  view.Rd
src/: Makevars.in  Makevars.win  RcppExports.cpp  hello.cpp  pick.cpp  sdlaudio.cpp  sdlimage.cpp  utils.cpp
tests/: testthat.R
tests/testthat/: setup-sdlr.R  teardwon-sdlr.R  test-audio.R  test-image.R  test-utils.R
